tests/rosetta/transpiler/FS/bitwise-operations.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/bitwise-operations.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Bitwise-operations' based on the file name 'bitwise-operations.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/bitwise-operations.fs(205,22): error FS0043: The type 'unit' does not have 'null' as a proper value
